Fix dropdown z-indexing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -311,6 +311,7 @@ html {
   box-shadow: 0 0.25em 0.5em rgba(52, 73, 94, 0.25);
   overflow: hidden;
   position: absolute;
+  z-index: 1;
 }
 
 .dropdown--device {
